[package]
name = "redb-cli"
description = "A CLI tool to read/modify redb database files"
version = "0.1.0"
authors = [ "Remy D. Farley <one-d-wide@protonmail.com>" ]
repository = "https://github.com/one-d-wide/redb-cli"
license = "MIT OR Apache-2.0"
edition = "2024"

[profile.dev]
debug = false

[profile.release]
debug = false

[dependencies]
clap = { version = "4", features = [ "derive" ] }
eyre = "0"
serde = "1"
serde_json = "1"
redb = "3"
